HOTFOOT-006: Update README, root pom.xml